# python-project-50

./: Makefile  README.md  demo.cast  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  generate_diff.py  parser.py  read_files.py  read_json.py
gendiff/formatters/: formatter_json.py  plain.py  stylish.py
gendiff/scripts/: demo.cast  gendiff.py  gendiff_diff.py  main.py  parser.py  read_files.py  read_json.py  two_dicts.py
tests/: correct_result.txt  demo.cast  test_gendiff.py
tests/fixtures/: result_plain.txt
