[tool.poetry]
name = "gendiff"
version = "0.1.0"
description = "Yo man"
authors = ["Goshka"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.scripts]
gendiff  = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
