[project]
name = "hexlet-code"
version = "0.1.0"
description = "Example application"
authors = [
    {name = "MLK PRODUCTION", email = "mlk18crypto@gmail.com"},
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
packages = ["gendiff"]
dependencies = [
    "pyyaml>=6.0.0",
]


[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]

[project.scripts]
gendiff = "gendiff.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
